<resources>
    <string name="app_name">Fillus</string>

    <string name="str_F">F</string>
    <string name="str_i">i</string>
    <string name="str_l_1">l</string>
    <string name="str_l_2">l</string>
    <string name="str_u">u</string>
    <string name="str_s">s</string>

    <string name="str_next">➳</string>
    <string name="str_plus">+</string>
    <string name="str_minus">–</string>

    <string name="str_menu_start">≡</string>
    <string name="str_menu_close">×</string>

    <string name="str_score">Score</string>
    <string name="str_time">Time</string>
    <string name="str_value">0</string>

    <string name="str_country">Country</string>

</resources>