<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <!-- BEGIN helpers -->
    <android.support.constraint.Guideline
        android:id="@+id/guideline_ht_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_ht_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_ht_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_ht_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_ht_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_ht_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_ht_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_ht_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_ht_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"
        />
    <android.support.constraint.Guideline
        android:id="@+id/guideline_vt_95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"
        />
    <!-- END helpers -->

    <!-- BEGIN txt_title -->
    <TextView
        android:id="@+id/txt_F_black"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/str_F"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_6"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_2"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_05"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_4" />

    <TextView
        android:id="@+id/txt_F_white"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/str_F"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_6"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_2"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_05"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_4" />

    <TextView
        android:id="@+id/txt_i_black"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/str_i"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_6"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_35"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_2"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_4" />

    <TextView
        android:id="@+id/txt_i_white"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/str_i"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_6"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_35"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_2"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_4" />

    <TextView
        android:id="@+id/txt_l_1_black"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/str_l_1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_6"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_5"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_35"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_4" />

    <TextView
        android:id="@+id/txt_l_1_white"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/str_l_1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_6"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_5"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_35"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_4" />

    <TextView
        android:id="@+id/txt_l_2_black"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/str_l_2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_6"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_65"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_5"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_4" />

    <TextView
        android:id="@+id/txt_l_2_white"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/str_l_2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_6"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_65"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_5"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_4" />

    <TextView
        android:id="@+id/txt_u_black"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/str_u"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_6"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_8"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_65"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_4" />

    <TextView
        android:id="@+id/txt_u_white"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/str_u"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_6"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_8"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_65"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_4" />

    <TextView
        android:id="@+id/txt_s_black"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/str_s"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_6"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_95"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_8"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_4" />

    <TextView
        android:id="@+id/txt_s_white"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/str_s"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_6"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_95"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_8"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_4" />
    <!-- END txt_title -->

    <!-- BEGIN btn_next -->
    <Button
        android:id="@+id/btn_next"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_next"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_8"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_5"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_5"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_8" />

    <TextView
        android:id="@+id/txt_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_next"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="40sp"
        android:translationZ="10dp"
        android:translationY="-2dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_8"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_5"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_5"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_8" />
    <!-- END btn_next -->

    <!-- BEGIN header -->
    <Button
        android:id="@+id/btn_plus"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_next"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_5"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_5"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_2"
        />

    <TextView
        android:id="@+id/txt_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/str_plus"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:translationY="-2dp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_5"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_5"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_2" />
    <!-- END header -->



</android.support.constraint.ConstraintLayout>